[package]
name = "waila-cli"
description = "What am I looking at? - parser for bitcoin strings"
version = "0.1.0"
edition = "2021"

[dependencies]
#bitcoin-waila = { git = "https://github.com/MutinyWallet/bitcoin-waila.git" }
bitcoin-waila = "0.2.0"
clap = { version = "4.1.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
secp256k1 = "0.27.0"
bitcoin = { version = "0.29.2", default-features = false, features = ["serde"] }
lnurl-rs = { version = "0.2.2", default-features = false }
lightning-invoice = { version = "0.23.0", default-features = false }
#lightning = { version = "0.0.115", default-features = false }
nostr = { version = "0.22.0-bitcoin-v0.29", default-features = false, features = ["nip19"] }
