[package]
name = "waila-cli"
description = "What am I looking at? - parser for bitcoin strings"
version = "0.1.0"
edition = "2021"

[dependencies]
#bitcoin-waila = { git = "https://github.com/MutinyWallet/bitcoin-waila.git" }
bitcoin-waila = "0.2.0"
clap = { version = "4.1.4", features = ["derive"] }
serde_json = "1.0"
bitcoin = { version = "0.29.2", default-features = false, features = ["serde"] }
nostr = { version = "0.22.0-bitcoin-v0.29", default-features = false, features = ["nip19"] }
