[package]
name = "waila-cli"
description = "What am I looking at? - parser for bitcoin strings"
version = "0.1.0"
edition = "2021"

[dependencies]
bitcoin = { version = "0.30.0" }
bitcoin-waila = { git = "https://github.com/MutinyWallet/bitcoin-waila.git", version = "0.2.3" }
clap = { version = "4.1.4", features = ["derive"] }
nostr = { version = "0.24.0" }
serde_json = "1.0"
